// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropsRenderer should render a table 1`] = `
<Styled(Table)
  columns={
    Array [
      Object {
        "caption": "Prop name",
        "render": [Function],
      },
      Object {
        "caption": "Type",
        "render": [Function],
      },
      Object {
        "caption": "Default",
        "render": [Function],
      },
      Object {
        "caption": "Description",
        "render": [Function],
      },
    ]
  }
  getRowKey={[Function]}
  rows={
    Array [
      Object {
        "description": "",
        "name": "color",
        "required": false,
        "type": Object {
          "name": "string",
        },
      },
    ]
  }
/>
`;

exports[`props columns should render PropTypes.arrayOf 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        colors
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        string[]
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.arrayOf(PropTypes.shape) 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foos
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        shape[]
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <Styled(Para)>
          <div
            key="bar"
          >
            <Styled(Name)>
              bar
            </Styled(Name)>
            : 
            <Styled(Type)>
              number
            </Styled(Type)>
          </div>
          <div
            key="baz"
          >
            <Styled(Name)>
              baz
            </Styled(Name)>
            : 
            <Styled(Type)>
              any
            </Styled(Type)>
          </div>
        </Styled(Para)>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.instanceOf 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        num
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        Number
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.objectOf 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        colors
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        {string}
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.objectOf(PropTypes.shape) 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        colors
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        {shape}
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <Styled(Para)>
          <div
            key="bar"
          >
            <Styled(Name)>
              bar
            </Styled(Name)>
            : 
            <Styled(Type)>
              number
            </Styled(Type)>
             — 
            <Styled(Text)
              color="light"
              size="small"
            >
              Required
            </Styled(Text)>
          </div>
          <div
            key="baz"
          >
            <Styled(Name)>
              baz
            </Styled(Name)>
            : 
            <Styled(Type)>
              any
            </Styled(Type)>
          </div>
        </Styled(Para)>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.oneOf 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        size
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        enum
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <Styled(Para)>
          <span>
            One of:
             
            <Group
              inline={true}
              separator=", "
            >
              <Styled(Code)
                key="\\"small\\""
              >
                small
              </Styled(Code)>
              <Styled(Code)
                key="\\"normal\\""
              >
                normal
              </Styled(Code)>
              <Styled(Code)
                key="\\"large\\""
              >
                large
              </Styled(Code)>
            </Group>
          </span>
        </Styled(Para)>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.oneOfType 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        union
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        union
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <Styled(Para)>
          <span>
            One of type:
             
            <Group
              inline={true}
              separator=", "
            >
              <Styled(Type)
                key="string-0"
              >
                string
              </Styled(Type)>
              <Styled(Type)
                key="number-1"
              >
                number
              </Styled(Type)>
            </Group>
          </span>
        </Styled(Para)>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.shape 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        shape
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <Styled(Para)>
          <div
            key="bar"
          >
            <Styled(Name)>
              bar
            </Styled(Name)>
            : 
            <Styled(Type)>
              number
            </Styled(Type)>
             — 
            <Styled(Text)
              color="light"
              size="small"
            >
              Required
            </Styled(Text)>
          </div>
          <div
            key="baz"
          >
            <Styled(Name)>
              baz
            </Styled(Name)>
            : 
            <Styled(Type)>
              any
            </Styled(Type)>
          </div>
        </Styled(Para)>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.shape defaultProps, falling back to Object 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        shape
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Text)
        color="light"
        size="small"
        title="somethingThatDoesntExist"
        underlined={true}
      >
        Shape
      </Styled(Text)>
    </div>
    <div
      key="3"
    >
      <div>
        <Styled(Para)>
          <div
            key="bar"
          >
            <Styled(Name)>
              bar
            </Styled(Name)>
            : 
            <Styled(Type)>
              number
            </Styled(Type)>
             — 
            <Styled(Text)
              color="light"
              size="small"
            >
              Required
            </Styled(Text)>
          </div>
          <div
            key="baz"
          >
            <Styled(Name)>
              baz
            </Styled(Name)>
            : 
            <Styled(Type)>
              any
            </Styled(Type)>
          </div>
        </Styled(Para)>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.shape with description 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        shape
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <Styled(Para)>
          <div
            key="bar"
          >
            <Styled(Name)>
              bar
            </Styled(Name)>
            : 
            <Styled(Type)>
              number
            </Styled(Type)>
             — 
            <Styled(Text)
              color="light"
              size="small"
            >
              Required
            </Styled(Text)>
             — 
            <Markdown
              inline={true}
              text="Number"
            />
          </div>
          <div
            key="baz"
          >
            <Styled(Name)>
              baz
            </Styled(Name)>
            : 
            <Styled(Type)>
              any
            </Styled(Type)>
             — 
            <Markdown
              inline={true}
              text="Any"
            />
          </div>
        </Styled(Para)>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.shape with formatted defaultProps 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        shape
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Text)
        color="light"
        size="small"
        title="{
  bar: 123,
  baz: baz() {
          return 'foo';
      },
  bing: bing() {
          return 'badaboom';
      },
  trotskij: () => 1935,
  qwarc: {
    si: 'señor'
  }
}"
        underlined={true}
      >
        Shape
      </Styled(Text)>
    </div>
    <div
      key="3"
    >
      <div>
        <Styled(Para)>
          <div
            key="bar"
          >
            <Styled(Name)>
              bar
            </Styled(Name)>
            : 
            <Styled(Type)>
              number
            </Styled(Type)>
             — 
            <Styled(Text)
              color="light"
              size="small"
            >
              Required
            </Styled(Text)>
          </div>
          <div
            key="baz"
          >
            <Styled(Name)>
              baz
            </Styled(Name)>
            : 
            <Styled(Type)>
              any
            </Styled(Type)>
          </div>
        </Styled(Para)>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.string 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        color
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        string
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.string with a default value 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        color
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        string
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Code)>
        pink
      </Styled(Code)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render PropTypes.string.isRequired 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        color
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        string
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Text)
        color="light"
        size="small"
      >
        Required
      </Styled(Text)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render arguments from JsDoc tags 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        size
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        number
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <Markdown
          text="Test description"
        />
        <JsDoc
          arg={
            Array [
              Object {
                "description": "Converts foo to bar",
                "name": "Foo",
                "type": Object {
                  "name": "Array",
                },
              },
            ]
          }
          param={
            Array [
              Object {
                "name": "Bar",
              },
            ]
          }
        />
        <Styled(Arguments)
          args={
            Array [
              Object {
                "description": "Converts foo to bar",
                "name": "Foo",
                "type": Object {
                  "name": "Array",
                },
              },
              Object {
                "name": "Bar",
              },
            ]
          }
          heading={true}
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render custom class type 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        React.ReactNode
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Text)
        color="light"
        size="small"
      >
        Required
      </Styled(Text)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render description in Markdown 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        color
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        string
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <Markdown
          text="Label"
        />
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render function body in tooltip 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        fn
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        func
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Text)
        color="light"
        size="small"
        title="(e) => console.log(e)"
        underlined={true}
      >
        Function
      </Styled(Text)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render function defaultValue as code when null 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        fn
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        func
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Code)>
        null
      </Styled(Code)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render function defaultValue as code when undefined 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        fn
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        func
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Code)>
        undefined
      </Styled(Code)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render function type with body in tooltip 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        <Styled(Text)
          size="small"
          title="() => void"
          underlined={true}
        >
          <Styled(Type)>
            function
          </Styled(Type)>
        </Styled(Text)>
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Text)
        color="light"
        size="small"
      >
        Required
      </Styled(Text)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render literal type 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        "bar"
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render name as deprecated when tag deprecated is present 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={true}
      >
        size
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        number
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <Markdown
          text="Test description"
        />
        <JsDoc
          deprecated={
            Array [
              Object {
                "description": "Do not use.",
                "title": "deprecated",
              },
            ]
          }
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render object type with body in tooltip 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        <Styled(Text)
          size="small"
          title="{ bar: string }"
          underlined={true}
        >
          <Styled(Type)>
            object
          </Styled(Type)>
        </Styled(Text)>
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Text)
        color="light"
        size="small"
      >
        Required
      </Styled(Text)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render optional type string 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        string
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render return from JsDoc tags 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        size
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        number
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <Markdown
          text="Test description"
        />
        <JsDoc
          return={
            Array [
              Object {
                "description": "Returns foo from bar",
                "title": "Foo",
                "type": Object {
                  "name": "Array",
                },
              },
            ]
          }
        />
        <Styled(Argument)
          description="Returns foo from bar"
          returns={true}
          title="Foo"
          type={
            Object {
              "name": "Array",
            }
          }
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render return from JsDoc tags 2`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        size
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        number
      </Styled(Type)>
    </div>
    <div
      key="2"
    />
    <div
      key="3"
    >
      <div>
        <Markdown
          text="Test description"
        />
        <JsDoc
          returns={
            Array [
              Object {
                "description": "Returns foo from bar",
                "title": "Foo",
                "type": Object {
                  "name": "Array",
                },
              },
            ]
          }
        />
        <Styled(Argument)
          description="Returns foo from bar"
          returns={true}
          title="Foo"
          type={
            Object {
              "name": "Array",
            }
          }
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render tuple type with body in tooltip 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        <Styled(Text)
          size="small"
          title="[\\"bar\\", number]"
          underlined={true}
        >
          <Styled(Type)>
            tuple
          </Styled(Type)>
        </Styled(Text)>
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Text)
        color="light"
        size="small"
      >
        Required
      </Styled(Text)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render type string 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        string
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Text)
        color="light"
        size="small"
      >
        Required
      </Styled(Text)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render type string with a default value 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        string
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Code)>
        bar
      </Styled(Code)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render union type with body in tooltip 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        foo
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        <Styled(Text)
          size="small"
          title="\\"bar\\" | number"
          underlined={true}
        >
          <Styled(Type)>
            union
          </Styled(Type)>
        </Styled(Text)>
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Text)
        color="light"
        size="small"
      >
        Required
      </Styled(Text)>
    </div>
    <div
      key="3"
    >
      <div>
        <Styled(Para)>
          <span>
            "bar" | number
          </span>
        </Styled(Para)>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`props columns should render unknown proptype for a prop when a relevant proptype is not assigned 1`] = `
<ul>
  <li
    key="0"
  >
    <div
      key="0"
    >
      <Styled(Name)
        deprecated={false}
      >
        color
      </Styled(Name)>
    </div>
    <div
      key="1"
    >
      <Styled(Type)>
        unknown
      </Styled(Type)>
    </div>
    <div
      key="2"
    >
      <Styled(Code)>
        pink
      </Styled(Code)>
    </div>
    <div
      key="3"
    >
      <div>
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;
